# Fullstack-Projects

./: .gitignore  README.md  ci-cd.yml
.github/workflows/: ci-cd.yml
shifts_website/: .dockerignore  CMakeLists.txt  Dockerfile  alembic.ini  fill_shifts.cpp  fill_shifts.py  pytest.ini  requirements.txt  reset_shifts.py  run.py  run_fill_shifts.py  seed_users.py  wsgi.py
shifts_website/app/: __init__.py  auth.py  models.py  routes.py  scheduler.py
shifts_website/app/static/css/: forbidden.css  style.css
shifts_website/app/static/js/: scheduler.js
shifts_website/app/templates/: index.html
shifts_website/app/templates/auth/: forbidden.html
shifts_website/migrations/: env.py
shifts_website/migrations/versions/: 49fe437b5a73_initial_schema.py  4e21524ddfd1_initial_tables.py
shifts_website/tests/: conftest.py  test_editing_lock.py  test_fill_shifts.py  test_forcefill.py  test_prefill.py  test_weekly_persistence.py
